--- a/app/index.css
+++ b/app/index.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background: #B2BABB;
+  background: #F5F5F5;
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
